# ctmd

./: .bazeliskrc  .bazelrc  .env  BUILD.bazel  CODEOWNERS  LICENSE  README.md  WORKSPACE  test  test.cpp  test_acc  test_acc.cpp  test_omp  test_omp.cpp  test_openacc_gpu.cpp  vector_add  vector_add.cpp
.devcontainer/: DockerFile  devcontainer.json  postCreateCommand.sh
.devcontainer/base/: DockerFile
.devcontainer/gpump/: DockerFile
.github/workflows/: unit_test.yml
benchmarks/add/: BUILD.bazel  epi16.cpp  epi16mp.cpp  epi32.cpp  epi32mp.cpp  epi64.cpp  epi64mp.cpp  epi8.cpp  epi8mp.cpp  epu16.cpp  epu16mp.cpp  epu32.cpp  epu32mp.cpp  epu64.cpp  epu64mp.cpp  epu8.cpp  epu8mp.cpp  pd.cpp  pdmp.cpp  ps.cpp  psmp.cpp  source.hpp
benchmarks/add/cpump/: BUILD.bazel  epi32.cpp  source.hpp
benchmarks/add/cpump/raw/: BUILD.bazel  epu8.cpp  source.hpp
benchmarks/add/gpump/: BUILD.bazel  source.hpp
benchmarks/add/gpump/raw/: source.hpp
benchmarks/add/native/: BUILD.bazel  source.hpp
benchmarks/add/native/raw/: BUILD.bazel  source.hpp
benchmarks/add/none/: source.hpp
benchmarks/add/openacc/: BUILD.bazel
benchmarks/add/openacc/raw/: BUILD.bazel  source.hpp
benchmarks/add/openmp/: BUILD.bazel  source.hpp
benchmarks/add/openmp/raw/: BUILD.bazel  epi8.cpp  ps.cpp  source.hpp
benchmarks/add/raw/: source.hpp
benchmarks/all/: source.hpp
benchmarks/all/none/: source.hpp
benchmarks/allclose/: source.hpp
benchmarks/array_equal/: source.hpp
benchmarks/atan2/: source.hpp
benchmarks/atan2/none/: source.hpp
benchmarks/clip/: source.hpp
benchmarks/clip/none/: source.hpp
benchmarks/copy/: epi16.cpp  source.hpp
benchmarks/copy/none/: source.hpp
benchmarks/cos/: source.hpp
benchmarks/cos/none/: source.hpp
benchmarks/divide/: BUILD.bazel  source.hpp
benchmarks/divide/none/: source.hpp
benchmarks/expand_dims/: epu16.cpp  source.hpp
benchmarks/expand_dims/none/: epi64.cpp  source.hpp
benchmarks/fill/: source.hpp
benchmarks/full/: epu32.cpp  epu64.cpp  source.hpp
benchmarks/isclose/: BUILD.bazel  source.hpp
benchmarks/isclose/none/: source.hpp
benchmarks/linalg/inv/: epu16.cpp  ps.cpp  source.hpp
benchmarks/linalg/matmul/: pd.cpp  source.hpp
benchmarks/linalg/matvec/: source.hpp
benchmarks/linalg/norm/: BUILD.bazel  epi32.cpp  epi64.cpp  epi8.cpp  source.hpp
benchmarks/linalg/norm/none/: epu32.cpp  source.hpp
benchmarks/linalg/vecmat/: source.hpp
benchmarks/multiply/: source.hpp
benchmarks/multiply/none/: source.hpp
benchmarks/negative/: source.hpp
benchmarks/negative/none/: source.hpp
benchmarks/random/rand/: BUILD.bazel  source.hpp
benchmarks/sin/: BUILD.bazel  source.hpp
benchmarks/sin/cpump/: BUILD.bazel  source.hpp
benchmarks/sin/none/: source.hpp
benchmarks/sin/raw/: BUILD.bazel
benchmarks/sqrt/: source.hpp
benchmarks/sqrt/none/: source.hpp
benchmarks/subtract/: source.hpp
benchmarks/subtract/none/: source.hpp
benchmarks/tan/: source.hpp
benchmarks/tan/none/: pd.cpp  source.hpp
ctmd/: abs.hpp  absolute.hpp  add.hpp  all.hpp  allclose.hpp  arange.hpp  array_equal.hpp  array_equiv.hpp  atan2.hpp  clip.hpp  concatenate.hpp  copy.hpp  cos.hpp  ctmd.hpp  ctmd_abs.hpp  ctmd_absolute.hpp  ctmd_add.hpp  ctmd_all.hpp  ctmd_allclose.hpp  ctmd_any.hpp  ctmd_arange.hpp  ctmd_array_equal.hpp  ctmd_array_equiv.hpp  ctmd_atan2.hpp  ctmd_clip.hpp  ctmd_concatenate.hpp  ctmd_copy.hpp  ctmd_cos.hpp  ctmd_deg2rad.hpp  ctmd_divide.hpp  ctmd_empty.hpp  ctmd_empty_like.hpp  ctmd_equal.hpp  ctmd_expand_dims.hpp  ctmd_eye.hpp  ctmd_fill.hpp  ctmd_full.hpp  ctmd_full_like.hpp  ctmd_greater.hpp  ctmd_greater_equal.hpp  (+63 more)
ctmd/core/: broadcast.hpp  convert.hpp  core.hpp  ctmd_core.hpp  ctmd_core_broadcast.hpp  ctmd_core_convert.hpp  ctmd_core_submdspan.hpp  ctmd_core_type.hpp  submdspan.hpp  type.hpp
ctmd/core/eigen/: ctmd_core_eigen.hpp  eigen.hpp
ctmd/creation/: ctmd_arange.hpp  ctmd_copy.hpp  ctmd_copy_like.hpp  ctmd_empty.hpp  ctmd_empty_like.hpp  ctmd_fill.hpp  ctmd_linspace.hpp  ctmd_ones.hpp  ctmd_ones_like.hpp
ctmd/linalg/: ctmd_linalg.hpp  ctmd_linalg_inv.hpp  ctmd_linalg_matmul.hpp  ctmd_linalg_matvec.hpp  ctmd_linalg_norm.hpp  ctmd_linalg_vecmat.hpp  inv.hpp  linalg.hpp  matmul.hpp  matvec.hpp  norm.hpp  vecmat.hpp
ctmd/logic/: ctmd_all.hpp  ctmd_allclose.hpp  ctmd_any.hpp  ctmd_array_equal.hpp  ctmd_equal.hpp  ctmd_greater.hpp  ctmd_greater_equal.hpp  ctmd_isclose.hpp  ctmd_less.hpp  ctmd_less_equal.hpp  ctmd_not_equal.hpp
ctmd/manipulation/: ctmd_concatenate.hpp  ctmd_reshape.hpp
ctmd/math/: ctmd_absolute.hpp  ctmd_add.hpp  ctmd_atan2.hpp  ctmd_clip.hpp  ctmd_cos.hpp  ctmd_deg2rad.hpp  ctmd_divide.hpp  ctmd_max.hpp  ctmd_maximum.hpp  ctmd_min.hpp  ctmd_minimum.hpp  ctmd_multiply.hpp  ctmd_negative.hpp  ctmd_sign.hpp  ctmd_sin.hpp  ctmd_sqrt.hpp  ctmd_subtract.hpp  ctmd_sum.hpp  ctmd_tan.hpp
ctmd/random/: ctmd_random.hpp  ctmd_random_rand.hpp  ctmd_random_uniform.hpp  rand.hpp  random.hpp  uniform.hpp
tests/add/: main.cpp
tests/all/: main.cpp
tests/allclose/: main.cpp
tests/any/: main.cpp
tests/arange/: main.cpp
tests/array_equal/: BUILD.bazel  main.cpp
tests/array_equiv/: main.cpp
tests/clip/: main.cpp
tests/concatenate/: main.cpp
tests/copy/: main.cpp
tests/deg2rad/: main.cpp
tests/divide/: main.cpp
tests/empty/: main.cpp
tests/empty_like/: main.cpp
tests/equal/: main.cpp
tests/expand_dims/: main.cpp
tests/eye/: main.cpp
tests/fill/: main.cpp
tests/full/: main.cpp
tests/full_like/: main.cpp
tests/greater/: main.cpp
tests/greater_equal/: main.cpp
tests/isclose/: main.cpp
tests/less/: main.cpp
tests/less_equal/: main.cpp
tests/linalg/inv/: main.cpp
tests/linspace/: main.cpp
tests/max/: main.cpp
tests/maximum/: BUILD.bazel  main.cpp
tests/min/: main.cpp
tests/minimum/: main.cpp
tests/multiply/: main.cpp
tests/negative/: main.cpp
tests/not_equal/: main.cpp
tests/rad2deg/: main.cpp
tests/reshape/: main.cpp
tests/sign/: main.cpp
tests/sin/: main.cpp
tests/subtract/: main.cpp
tests/sum/: main.cpp
tests/to_string/: main.cpp
(+78 files in other folders)
