cc_library(
    name = "ctmd",
    hdrs = glob(["ctmd/**/*.hpp"]),
    deps = [
        "@mdspan",
        "@eigen",
    ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    linkopts = [
        "-lgomp",
    ],    
    visibility = ["//visibility:public"],
)
