cc_library(
    name = "ctmd",
    hdrs = glob(["ctmd/**/*.hpp"]),
    deps = [
        "@mdspan",
        "@eigen",
    ],
    copts = [
        "-O3",
        "-funroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
    ],
    # defines = ["USE_EIGEN"],
    visibility = ["//visibility:public"],
)
