cc_binary(
    name = "epi8",
    srcs = [
        "source.hpp",
        "epi8.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi8mp",
    srcs = [
        "source.hpp",
        "epi8mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi16",
    srcs = [
        "source.hpp",
        "epi16.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi16mp",
    srcs = [
        "source.hpp",
        "epi16mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi32",
    srcs = [
        "source.hpp",
        "epi32.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi32mp",
    srcs = [
        "source.hpp",
        "epi32mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi64",
    srcs = [
        "source.hpp",
        "epi64.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epi64mp",
    srcs = [
        "source.hpp",
        "epi64mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu8",
    srcs = [
        "source.hpp",
        "epu8.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu8mp",
    srcs = [
        "source.hpp",
        "epu8mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu16",
    srcs = [
        "source.hpp",
        "epu16.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu16mp",
    srcs = [
        "source.hpp",
        "epu16mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu32",
    srcs = [
        "source.hpp",
        "epu32.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu32mp",
    srcs = [
        "source.hpp",
        "epu32mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu64",
    srcs = [
        "source.hpp",
        "epu64.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "epu64mp",
    srcs = [
        "source.hpp",
        "epu64mp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)


cc_binary(
    name = "ps",
    srcs = [
        "source.hpp",
        "ps.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "psmp",
    srcs = [
        "source.hpp",
        "psmp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)


cc_binary(
    name = "pd",
    srcs = [
        "source.hpp",
        "pd.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)

cc_binary(
    name = "pdmp",
    srcs = [
        "source.hpp",
        "pdmp.cpp",
        ],
    copts = [
        "-O3",
        "-Ofast",
        "-unroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
        "-fopenmp",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
        "//:ctmd",
    ],
)
