cc_binary(
    name = "ps",
    srcs = [
        "source.hpp",
        "ps.cpp",
        ],
    copts = [
        "-O3",
        # "-Ofast",
        "-funroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "pd",
    srcs = [
        "source.hpp",
        "pd.cpp",
        ],
    copts = [
        "-O3",
        # "-Ofast",
        "-funroll-loops",
        "-fno-exceptions",
        "-fno-rtti",
        "-Wall",
        "-march=native",
    ],
    deps = [
        "@com_google_benchmark//:benchmark",
    ],
)
